examples/k8stest/conf/HTTPRoute/Protocol/WebSocket/Service.yaml
# WebSocket 测试套件服务
apiVersion: v1
kind: Service
metadata:
  name: test-websocket
  namespace: edgion-test
spec:
  selector:
    app: edgion-test-server
  ports:
    - port: 30005
      targetPort: 30005
      protocol: TCP
