examples/k8stest/conf/HTTPRoute/Protocol/WebSocket/HTTPRoute.yaml
# WebSocket 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket-test
  namespace: edgion-test
spec:
  parentRefs:
    - name: websocket-test-gateway
      namespace: edgion-test
  hostnames:
    - "test.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - name: test-websocket
          port: 30005
